@@ -778,6 +778,14 @@
 # remote broker, and delivered when the bridge reconnects.
 #cleansession false
 
+# If the bridge is using MQTT v5.0 then use bridge_session_expiry_interval to
+# set the session expiry interval. Set to 0 to have the session expire
+# immediately when the connection drops. Set to 0xFFFFFFFF to have an infinite
+# expiry interval. Otherwise the expiry interval is set to the number of
+# seconds that you specify.
+# Defaults to 0.
+#bridge_session_expiry_interval 0
+
 # Set the amount of time a bridge using the lazy start type must be idle before
 # it will be stopped. Defaults to 60 seconds.
 #idle_timeout 60
